--- a/main.tex
+++ b/main.tex
@@ -22,12 +22,51 @@
 \section{Линейные операторы, инвариантность, спектр}
 
 \begin{enumerate}
-    \item \textbf{Докажите, что линейная комбинация линейных операторов является линейным оператором.}
-    \item \textbf{Докажите, что произведение операторов является линейным оператором.}
-    \item \textbf{Докажите, что если линейный оператор обратим, то обратный к нему определён однозначно и является линейным оператором.}
-    \item \textbf{Пусть $V$ и $W$ --- конечномерные пространства над общим полем. Докажите, что для обратимости линейного оператора $A: V \rightarrow W$ необходимо и достаточно выполнение условий $dimV = dimW$ и $kerA = 0$.}
-    \item \textbf{Докажите, что ядро и образ линейного оператора являются его инвариантными подпространствами.}
-    \item \textbf{Докажите, что сумма ранга и дефекта линейного оператора равна размерности его области определения.}
+    \item \textbf{Докажите, что линейная комбинация линейных операторов является линейным оператором.}\\
+    
+    Рассмотрим оператор $A = \gamma_1 A_1 + \cdots + \gamma_n A_n$ и проверим, является ли он линейным:
+    \[
+    A(\alpha x + \beta y) = (\gamma_1 A_1 + \cdots + \gamma_n A_n)(\alpha x + \beta y) = \gamma_1 A_1 \alpha x + \cdots + \gamma_n A_n \alpha x + \gamma_1 A_1 \beta y + \cdots + \gamma_n A_n \beta y = \]\[
+    = \alpha \gamma_1 A_1  x + \cdots + \alpha \gamma_n A_n  x + \beta \gamma_1 A_1  y + \cdots + \beta \gamma_n A_n  y =\]\[ \alpha(\gamma_1 A_1 + \cdots + \gamma_n A_n)x + \beta(\gamma_1 A_1 + \cdots + \gamma_n A_n)y = \alpha A x + \beta A y
+    \]
+    таким образом оператор $A$ --- линейный, чтд.
+    \item \textbf{Докажите, что произведение линейных операторов является линейным оператором.}\\
+    
+     Пусть есть линейные операторы $A: V \rightarrow W$ и $B : W \rightarrow Z$ .Рассмотрим оператор $C : V \rightarrow Z$, $C = BA$ и проверим, является ли он линейным:
+     \[
+     C(\alpha x + \beta y) = BA(\alpha x + \beta y) = BA\alpha x + BA \beta y = B (\alpha A x) + B(\beta A  y) = \alpha BA x + \beta AB y = \alpha C x + \beta C y
+     \]
+     как видим, оператор $C$ --- линейный.
+    \item \textbf{Докажите, что если линейный оператор обратим, то обратный к нему определён однозначно и является линейным оператором.}\\
+    
+    пусть $A : V \rightarrow W$ --- обратимый линейный оператор и $B : W \rightarrow V$ --- обратный оператор к $A$: $BA = I = ABAB = AB$.  \\
+    Единственность: пусть есть оператор $C \neq B$ такой что $AC = CA = I$, тогда 
+    \[
+    0 = I - I = AB - AC = A(B - C)
+    \]
+    значит либо $A = 0$, либо $B - C = 0 \Rightarrow B = C$.\\
+    Линейность: \[
+    B(\alpha x + \beta y) = B(\alpha AB x + \beta AB y) = B(A(\alpha B x + \beta B y)) = \alpha B x + \beta B y
+    \]
+    несложно увидеть, что оператор $B$ --- линейный. дальше обозначаем по-нормальному $B = A^{-1}$.
+    
+    \item \textbf{Пусть $V$ и $W$ --- конечномерные пространства над общим полем. Докажите, что для обратимости линейного оператора $A: V \rightarrow W$ необходимо и достаточно выполнение условий $dimV = dimW$ и $kerA = 0$.}\\
+
+    Необходимость: Так как для $\forall x \in V$ существует прообраз $y = Ax \in W$, ведь $x = A^{-1}y$, то $dimV \leqslant dimW$. Так как для $\forall y \in W$ существует прообраз $x = A^{-1}y \in V$, ведь $y = Ax$, то $dimW \leqslant dimV$. А значит $dimV = dimW$. Теперь пусть существует $x \in V, \quad x \neq 0$ принадлежащий ядру оператора $A$: $Ax = 0$. Тогда $A^{-1}0 = x$, но так как $A^{-1}$ --- линейный, то $A^{-1}0 = 0 \neq x$ --- противоречие.\\
+
+    Достаточность: пусть $e_1, \cdots, e_n$ --- базис $V$, тогда если $x = \alpha_1 e_1 + \cdots + \alpha_n e_n$, то $y = Ax = \alpha_1 Ae_1 + \cdots + \alpha_n Ae_n$, если вектора $Ae_1, \cdots, Ae_n$ --- линейно зависимы, то существует их нетривиальная линейная комбинация, равная нулю: $\beta_1Ae_1 + \cdots + \beta_nAe_n = 0 \Rightarrow A(\beta_1 e_1 + \cdots + \beta_n e_n) = 0$, однако так как $e_1, \cdots, e_n$ линейно независимы, то $z = \beta_1 e_1 + \cdots + \beta_n e_n \neq 0$, но это значит, что $\exists z \in V, z \neq 0 : Az = 0 \Rightarrow kerA \neq 0$ --- противоречие, значит $Ae_1, \cdots, Ae_n$ линейно независимы и их число равно размерности $W$, а значит это базис $W$.\\
+    Теперь определим действие оператора $A^{-1}$ на базисных векторах $W$ и покажем, что он будет обратным к $A$:
+    $A^{-1}(Ae_k) = e_k \quad \forall k \in \{1, \cdots, n\}$ такой оператор существует и единственный (потому что для того, чтобы задать оператор, достаточно задать его действие на базисных векторах области определения), и при этом $A^{-1}Ax = A^{-1}(\alpha_1 Ae_1 + \cdots + \alpha_n Ae_n) = \alpha_1 A^{-1} Ae_1 + \cdots + \alpha_n A^{-1} Ae_n = \alpha_1 e_1 + \cdots + \alpha_n e_n = x$, значит $A^{-1}$ --- обратный оператор. Ч.Т.Д.
+    \item \textbf{Докажите, что ядро и образ линейного оператора являются его инвариантными подпространствами.}\\
+
+    \textit{Ядро}: Пусть $A: V \rightarrow V$, $x \in  V,\quad Ax = 0$, то есть $x \in kerA$, тогда $Ax = 0 \in kerA \quad \forall x \in kerA$\\
+
+    \textit{образ}: Пусть $A: V \rightarrow V$, $y \in imA$, то есть $\exists x: Ax = y$, тогда $Ay = z \in imA$, так как у $z$ есть прообраз $y$.
+    
+    \item \textbf{Докажите, что сумма ранга и дефекта линейного оператора равна размерности его области определения.}\\
+
+    Ядро линейного оператора $A: V \rightarrow W$ --- линейное подпространство пространства $V$, базис ядра: $a_1, \cdots, a_k$, размерность ядра $dim(kerA) = k$. дополним его до базиса пространства $V$: $a_1, \cdots, a_k, b_{k + 1}, \cdots, b_n$. Заметим, что так как $b_{k + 1}, \cdots, b_n \in V \setminus kerA$, то $Ab_i \neq 0 \forall i \in \{k + 1, \cdots, n\}$, вектора $Ab_{k + 1}, \cdots, Ab_n$ --- линейно независимы.\\ Действительно, если бы они были бы линейно зависимы, то существовала бы нетривиальная линейная комбинация $\alpha_1 Ab_{k + 1} + \cdots + \alpha_{n - k} A b_n = 0 \Rightarrow A(\alpha_1 b_{k + 1} + \cdots + \alpha_{n - k} b_n) = 0$, то есть $\alpha_1 b_{k + 1} + \cdots + \alpha_{n - k} b_n \in kerA$, а это протиоречит выбору векторов $b_{k + 1}, \cdots, b_n$. Теперь разложим $\forall x \in V$ в выбранном базисе, подействуем на него оператором и посмотрим, что интересного произойдёт: $Ax = \alpha_1 Aa_1 + \cdots + \alpha_k Aa_k + \alpha_{k + 1}Ab_{k + 1} + \cdots + \alpha_nAb_n = \alpha_{k + 1}Ab_{k + 1} + \cdots + \alpha_nAb_n$, заметим, что любой вектор из образа можно представить как линейную комбинацию $n - k$ линейно независимых векторов $Ab_{k + 1} + \cdots + Ab_n$, то есть это базис образа, то есть $dim(imA) = n - k$. Осталось сложить дважды два: $dim(kerA) + dim(imA) = k + (n - k) = n$. Ч.Т.Д.
+    
     \item \textbf{Докажите, что сумма ядер двух линейных операторов, действующих на одном пространстве, совпадает с этим пространством, то образ суммы равен сумме образов.}
     \item \textbf{Линейный оператор $A: V \rightarrow V$ удовлетворяет равенству $A^m = 0$. Докажите, что оператор $I - A$ --- обратим.}
     \item \textbf{Линейные операторы $A$ и $B$ таковы, что оператор $A + B$ обратимый. Докажите, что операторы $P = (A + B)^{-1}A$ и $Q = (A + B)^{-1}B$ коммутируют.}
@@ -63,7 +102,37 @@
     \item \textbf{Докажите, что если $B$ --- нильпотентный оператор, векторы $x, Bx, \cdots, B^{k - 1}x$ ненулевые, а $B^kx = 0$, то $x, Bx, \cdots, B^{k - 1}x$ векторы линейно независимы.}
     \item \textbf{Линейный оператор $A$ называется нильпотентным на векторе $x \neq 0$, если существует натуральное число $k$, для которого $A^kx = 0$. Минимальное такое $k$ называется индексом нильпотентности оператора $A$  на векторе $x$. Пусть $A$ --- линейный оператор и $k_1, \cdots, k_t$ --- его индексы нильпотентности на векторах $x_1, \cdots, x_t$. Докажите, что для линейной независимости составной системы векторов Крылова $x_1, Ax_1, \cdots, A^{k_1 - 1}x_1, \cdots , x_t, Ax_t, \cdots, A^{k_t - 1}x_t$ необходима и достаточна линейная независимость векторов $A^{k_1 - 1}x_1, \cdots, A^{k_t - 1}x_t$.}
     \item \textbf{докажите, что любой нильпотентный оператор, действующий на конечномерном пространстве, расщепляется в прямую сумму нерасщепляемых операторов, действущих на инвариантных подпространствах Крылова.}
-    \item \textbf{Докажите, что в любом расщеплении конечномерного пространства в прямую сумму инвариантных подпространств Крылова для нильпотентного оператора $A$ число подпространств размерности $k$ равно $N^k$}
+    \item \textbf{Докажите, что в любом расщеплении конечномерного пространства в прямую сумму инвариантных подпространств Крылова для нильпотентного оператора $A$ число подпространств размерности $k$ равно $N_k= 2defA^k - defA^{k - 1} - defA^{k + 1}$.}
+    \item \textbf{Докажите, что максимальное расщепление линейного оператора $A$ на конечномерном пространстве состоит из квазискалярных операторов, отвечающих его попарно различным собственным значениям и действующих на инвариантных пространствах Крылова. При этом число подпространств размерности $k$ для собственного значения $\lambda$ равно: $N_k(\lambda) = 2def(A - \lambda I)^k - def(A - \lambda I)^{k - 1} - def(A - \lambda I)^{k + 1}$.}
+    \item \textbf{Докажите, что любая комплексная матрица $A$ подобна некоторой жордановой матрице. При этом в любой жордановой матрице $A$ число жордановых клеток вида $J(\lambda, k)$ равно $N_k(\lambda) = 2def(A - \lambda I)^k - def(A - \lambda I)^{k - 1} - def(A - \lambda I)^{k + 1}$.}
+    \item \textbf{Докажите, что комплексные матрицы подобны в том и только в том случае, когда они имеют одну и ту же жорданову форму с точностью до  перестановки жордановых клеток.}
+    \item \textbf{Всегда ли можно построить жорданов базис, содержащий произвольно выбранные базисы в собственных подпространствах.}
+    \item \textbf{Докажите, что любая вещественная матрифа порядка $n \geqslant 2$ имеет вещественное инвариантное подпространство размерности 2.}
+    \item \textbf{Нильпотентная матрица $J$ порядка $n = 10$ имеет две жордановы клетки порядка $3$ и две жордановы клетки порядка $2$. Найдите жорданову форму матрицы $A = J^2$.}
+    \item \textbf{Известно, что $A^k = A, \quad k \geqslant 2$. Докажите, что матрица $A$ диагонализуема.}
+    \item \textbf{Сумма двух линейных операторов, действующих на конечномерном пространстве $V$, является обратимым оператором, а произведение --- нулевым оператором. Докажите, что сумма рангов этих операторов равна размерности пространства $V$.}
+    \item \textbf{Матрицы $A, B, C, X, Y$ порядка $n$ над одним и тем же полем удовлетворяют равенству $XA + BY = C$. Докажите эквивалентность матриц $L = 
+    \begin{bmatrix}
+        A & 0\\
+        C & B\\
+    \end{bmatrix}
+    $ и $D = 
+    \begin{bmatrix}
+        A & 0\\
+        0 & B\\
+    \end{bmatrix}
+    $.}
+    \item \textbf{Многочлены $f_A(\lambda) = \prod_{i=1}^{n}(\lambda - \lambda_i)$ и $f_B(\lambda) = \prod_{i=1}^{n}(\lambda - \mu)$ являются характеристическими многочленами матриц $A$ и $B$. Найти характеристический многочлен линейного оператора $X \rightarrow AX + XB$, действующего на пространстве $n \times n$ матриц $X$.}
+    \item \textbf{Пусть $A$ --- матрица порядка $n$ и ранга $r$. Докажите, что матрица $I + A$ имеет собственное значение $1$ кратности $\geqslant n - r$.}
+    \item \textbf{Все элементы вещественной квадратной матрицы неотрицательны, а суммы элементов в каждой строке одинаковы и равны $\alpha$. докажите, что число $\alpha$ является наибольшим по модулю собственным значением данной матрицы.}
+    \item \textbf{комплексные квадратные матрицы $A_1, \cdots , A_m$ попарно коммутируют. Докажите, что они имеют общий собственный вектор.}
+    \item \textbf{Докажите, что если $A \in \mathds{R}^{n \times n}$ и $rank(I - A) = n - rank(A)$, то $A^2 = A$.}
+    \item \textbf{линейный оператор $A$ на конечномерном пространстве удовлетворяет условию $A^2 =A$. Найдите его собственные значения и докажите, что он имеет простую структуру.}
+    \item \textbf{Найдите жорданову форму матрицы $A^3$, где $A$ --- жорданова клетка порядка $n$.}
+    \item \textbf{Найдите собственные значения и собственные подпространства комплексной матрицы $A = I - 2uu^{*}$, где $u^{*}u = 1, \quad u \in \mathds{C}^n$.}
+    \item \textbf{В вещественной матрице, которая является нильпотентной жордановой клеткой порядка $n$, элемент в позиции $(n, 1)$ заменяется на $\varepsilon > 0$. Докажите, что все собственные значения возмущённой матрицы простые и по модулю равны $\varepsilon^{\frac{1}{n}}$.}
+    \item \textbf{Докажите, что линейный оператор $A: V \rightarrow V$ коммутирует со всеми линейными операторами, действующими на бесконечномерном пространстве $V$ над полем $\mathds{P}$, в том и только в том случае, когда он является оператором умножения на некоторое число из поля $\mathds{P}$.}
+    
 \end{enumerate}
 \section{Расстояния, нормы, скалярные произведения, полиэдры}
 \begin{enumerate}%задачки оформляем так
@@ -76,5 +145,5 @@
 \begin{enumerate}
     \item 
 \end{enumerate}
-
+\input{PS}
 \end{document}
