--- a/titlepage.tex
+++ b/titlepage.tex
@@ -11,9 +11,10 @@
        \vspace{1.5cm}
 
        \begin{flushright}
-       Сделали два неравнодушных шиза:\\
+       Сделали n неравнодушных шизов:\\
        Владимир Якунин \\
-       Надежда Белоусова\\
+       (waiting for answer)Надежда Белоусова\\
+       место для шага вперед
        \end{flushright}
 
        \vfill
