--- a/titlepage.tex
+++ b/titlepage.tex
@@ -14,7 +14,7 @@
        Сделали n неравнодушных шизов:\\
        Владимир Якунин \\
        (waiting for answer)Надежда Белоусова\\
-       место для шага вперед
+       (waiting for commits) Ирина клочкова\\
        \end{flushright}
 
        \vfill
