--- a/main.tex
+++ b/main.tex
@@ -55,6 +55,7 @@
     Необходимость: Так как для $\forall x \in V$ существует прообраз $y = Ax \in W$, ведь $x = A^{-1}y$, то $dimV \leqslant dimW$. Так как для $\forall y \in W$ существует прообраз $x = A^{-1}y \in V$, ведь $y = Ax$, то $dimW \leqslant dimV$. А значит $dimV = dimW$. Теперь пусть существует $x \in V, \quad x \neq 0$ принадлежащий ядру оператора $A$: $Ax = 0$. Тогда $A^{-1}0 = x$, но так как $A^{-1}$ --- линейный, то $A^{-1}0 = 0 \neq x$ --- противоречие.\\
 
     Достаточность: пусть $e_1, \cdots, e_n$ --- базис $V$, тогда если $x = \alpha_1 e_1 + \cdots + \alpha_n e_n$, то $y = Ax = \alpha_1 Ae_1 + \cdots + \alpha_n Ae_n$, если вектора $Ae_1, \cdots, Ae_n$ --- линейно зависимы, то существует их нетривиальная линейная комбинация, равная нулю: $\beta_1Ae_1 + \cdots + \beta_nAe_n = 0 \Rightarrow A(\beta_1 e_1 + \cdots + \beta_n e_n) = 0$, однако так как $e_1, \cdots, e_n$ линейно независимы, то $z = \beta_1 e_1 + \cdots + \beta_n e_n \neq 0$, но это значит, что $\exists z \in V, z \neq 0 : Az = 0 \Rightarrow kerA \neq 0$ --- противоречие, значит $Ae_1, \cdots, Ae_n$ линейно независимы и их число равно размерности $W$, а значит это базис $W$.\\
+    
     Теперь определим действие оператора $A^{-1}$ на базисных векторах $W$ и покажем, что он будет обратным к $A$:
     $A^{-1}(Ae_k) = e_k \quad \forall k \in \{1, \cdots, n\}$ такой оператор существует и единственный (потому что для того, чтобы задать оператор, достаточно задать его действие на базисных векторах области определения), и при этом $A^{-1}Ax = A^{-1}(\alpha_1 Ae_1 + \cdots + \alpha_n Ae_n) = \alpha_1 A^{-1} Ae_1 + \cdots + \alpha_n A^{-1} Ae_n = \alpha_1 e_1 + \cdots + \alpha_n e_n = x$, значит $A^{-1}$ --- обратный оператор. Ч.Т.Д.
     \item \textbf{Докажите, что ядро и образ линейного оператора являются его инвариантными подпространствами.}\\
@@ -65,22 +66,103 @@
     
     \item \textbf{Докажите, что сумма ранга и дефекта линейного оператора равна размерности его области определения.}\\
 
-    Ядро линейного оператора $A: V \rightarrow W$ --- линейное подпространство пространства $V$, базис ядра: $a_1, \cdots, a_k$, размерность ядра $dim(kerA) = k$. дополним его до базиса пространства $V$: $a_1, \cdots, a_k, b_{k + 1}, \cdots, b_n$. Заметим, что так как $b_{k + 1}, \cdots, b_n \in V \setminus kerA$, то $Ab_i \neq 0 \forall i \in \{k + 1, \cdots, n\}$, вектора $Ab_{k + 1}, \cdots, Ab_n$ --- линейно независимы.\\ Действительно, если бы они были бы линейно зависимы, то существовала бы нетривиальная линейная комбинация $\alpha_1 Ab_{k + 1} + \cdots + \alpha_{n - k} A b_n = 0 \Rightarrow A(\alpha_1 b_{k + 1} + \cdots + \alpha_{n - k} b_n) = 0$, то есть $\alpha_1 b_{k + 1} + \cdots + \alpha_{n - k} b_n \in kerA$, а это протиоречит выбору векторов $b_{k + 1}, \cdots, b_n$. Теперь разложим $\forall x \in V$ в выбранном базисе, подействуем на него оператором и посмотрим, что интересного произойдёт: $Ax = \alpha_1 Aa_1 + \cdots + \alpha_k Aa_k + \alpha_{k + 1}Ab_{k + 1} + \cdots + \alpha_nAb_n = \alpha_{k + 1}Ab_{k + 1} + \cdots + \alpha_nAb_n$, заметим, что любой вектор из образа можно представить как линейную комбинацию $n - k$ линейно независимых векторов $Ab_{k + 1} + \cdots + Ab_n$, то есть это базис образа, то есть $dim(imA) = n - k$. Осталось сложить дважды два: $dim(kerA) + dim(imA) = k + (n - k) = n$. Ч.Т.Д.
+    Ядро линейного оператора $A: V \rightarrow W$ --- линейное подпространство пространства $V$, базис ядра: $a_1, \cdots, a_k$, размерность ядра $dim(kerA) = k$. дополним его до базиса пространства $V$: $a_1, \cdots, a_k, b_{k + 1}, \cdots, b_n$. Заметим, что так как $b_{k + 1}, \cdots, b_n \in V \setminus kerA$, то $Ab_i \neq 0 \forall i \in \{k + 1, \cdots, n\}$, вектора $Ab_{k + 1}, \cdots, Ab_n$ --- линейно независимы.\\
     
-    \item \textbf{Докажите, что сумма ядер двух линейных операторов, действующих на одном пространстве, совпадает с этим пространством, то образ суммы равен сумме образов.}
-    \item \textbf{Линейный оператор $A: V \rightarrow V$ удовлетворяет равенству $A^m = 0$. Докажите, что оператор $I - A$ --- обратим.}
-    \item \textbf{Линейные операторы $A$ и $B$ таковы, что оператор $A + B$ обратимый. Докажите, что операторы $P = (A + B)^{-1}A$ и $Q = (A + B)^{-1}B$ коммутируют.}
+    Действительно, если бы они были бы линейно зависимы, то существовала бы нетривиальная линейная комбинация $\alpha_1 Ab_{k + 1} + \cdots + \alpha_{n - k} A b_n = 0 \Rightarrow A(\alpha_1 b_{k + 1} + \cdots + \alpha_{n - k} b_n) = 0$, то есть $\alpha_1 b_{k + 1} + \cdots + \alpha_{n - k} b_n \in kerA$, а это протиоречит выбору векторов $b_{k + 1}, \cdots, b_n$.\\
+    
+    Теперь разложим $\forall x \in V$ в выбранном базисе, подействуем на него оператором и посмотрим, что интересного произойдёт: $Ax = \alpha_1 Aa_1 + \cdots + \alpha_k Aa_k + \alpha_{k + 1}Ab_{k + 1} + \cdots + \alpha_nAb_n = \alpha_{k + 1}Ab_{k + 1} + \cdots + \alpha_nAb_n$, заметим, что любой вектор из образа можно представить как линейную комбинацию $n - k$ линейно независимых векторов $Ab_{k + 1} + \cdots + Ab_n$, то есть это базис образа, то есть $dim(imA) = n - k$.\\
+    
+    Осталось сложить дважды два: $dim(kerA) + dim(imA) = k + (n - k) = n$. Ч.Т.Д.
+    
+    \item \textbf{Докажите, что если сумма ядер двух линейных операторов, действующих на одном пространстве, совпадает с этим пространством, то образ суммы равен сумме образов.}\\
+
+    Дано: $A: V \rightarrow V, B: V \rightarrow V$, $kerA + kerB = V$, это означает, что любой вектор $\forall x \in V$ можно представить в виде $x = a + b$, где $a \in kerA \quad b \in kerB$, тогда подействуем на этот вектор оператором $A + B$: $(A + B)x = (A + B)(a + b) = Aa + Ab + Ba + Bb = Ab + Ba$, где $Ab \in imA, Ba \in imB$. То есть любой вектор из образа суммы лежит в сумме образов.\\
+    
+    Теперь рассмотрим вектор $x = \alpha Ay + \beta Bz$ --- вектор из суммы образов. Для удобства сделаем замену и избавимся от коэффициентов: $\alpha Ay = A(\alpha y) = Ay'$, $\beta B z = B(\beta z) = Bz'$ . Представим вектора $y' = a_1 + b_1$, $z' = a_2 + b_2$, где $a_1, a_2 \in kerA$, $b_1, b_2 \in kerB$, тогда $x = Ay' + Bz' = Aa_1 + Ab_1 + Ba_2 + Bb_2 = Ab_1 + Ba_2 = Aa_2 + Ab_1 + Ba_2 + Bb_1 = (A + B)(a_2 + b_1)$. То есть любой вектор из суммы образов является вектором из образа суммы.\\
+
+    Таким образом мы доказали, что $x \in im(A +B) \Rightarrow x \in imA + imB$ и $x \in imA + imB \Rightarrow x \in im(A +B)$, то есть $im(A + B) = imA + imB$. Ч.Т.Д.
+    
+    \item \textbf{Линейный оператор $A: V \rightarrow V$ удовлетворяет равенству $A^m = 0$. Докажите, что оператор $I - A$ --- обратим.}\\
+
+    В данной задаче требуется догадаться и вспомнить школьную формулу: $x^n - y^n = (x - y)(x^{n - 1} + x^{n - 2}y + \cdots + y^{n - 1})$.\\
+    По этой формулке $I = I - A^m = (I - A)(I + A + A^2 + \cdots + A^{m - })$.\\
+    Из этого следует, что $I - A$ обратим и обратный к нему  $A^{-1} = I + A + A^2 + \cdots + A^{m - 1}$.\\
+    
+    \item \textbf{Линейные операторы $A$ и $B$ таковы, что оператор $A + B$ обратимый. Докажите, что операторы $P = (A + B)^{-1}A$ и $Q = (A + B)^{-1}B$ коммутируют.}\\
+
+    Рассмотрим сумму операторов $P$ и $Q$: $P + Q = (A + B)^{-1}A + (A + B)^{-1}B = (A + B)^{-1}(A + B) = I \Rightarrow P = I - Q$. А значит $PQ = (I - Q)Q = Q - Q^2 = Q(I - Q) = QP$. Ч.Т.Д.\\
+    
     \item \textbf{Докажите, что для того, чтобы оператор $P: V \rightarrow V$ был оператором проектирования, необходимо и достаточно, чтобы выполнялось условие $P^2 = P$.}
-    \item \textbf{Докажите, что для того чтобы матрицы одного размера были матрицами одного и того же линейного оператора в каких-то арах базисов необходимо и достаточно, чтобы они имели одинаковый ранг.}
+    
+    \item \textbf{Докажите, что для того чтобы матрицы одного размера были матрицами одного и того же линейного оператора в каких-то парах базисов необходимо и достаточно, чтобы они имели одинаковый ранг.}
     \item \textbf{Докажите, что определитель и след квадратной матрицы являются инвариантами подобия}
-    \item \textbf{Докажите, что барактеристический многочлен квадратной матрицы является инвариантом подобия.}
+
+    \textit{Определитель:} Матрица $B$ подобна матрице $A$, то есть $B = Q^{-1}AQ \Rightarrow |B| = |Q^{-1}||A||Q| = |Q^{-1}||Q||A| = |Q^{-1}Q||A| = |I||A| = |A|$ так как произведение определителей равно определителю произведения. Ч.Т.Д.\\
+
+    \textit{След:} Легко заметить, что $tr(AB) = \sum \limits_{1 \leqslant i, j \leqslant n} a_{ij}b_{ji}$, из этого очевидно, что $tr(AB) = tr(BA)$, а значит $tr(B) = tr(Q^{-1}AQ) = tr(Q^{-1}QA) = tr(A)$. Ч.Т.Д.
+    
+    \item \textbf{Докажите, что характеристический многочлен квадратной матрицы является инвариантом подобия.}\\
+    Матрица $B$ подобна матрице $A$, то есть $B = Q^{-1}AQ$, тогда найдём определитель матрицы $B - \lambda I$: $|B - \lambda I| = |Q^{-1}AQ - \lambda I| = |Q^{-1}AQ - \lambda Q^{}-1IQ| = |Q^{-1}(A - \lambda I)Q| = |Q^{-1}||A - \lambda I||Q| = |Q^{-1}||Q||A - \lambda I| = |Q^{-1}Q||A - \lambda I| = |A - \lambda I|$. Как видим, характеристические многочлены совпадают. Ч.Т.Д.
+    
     \item \textbf{Найдите характеристический многочлен матрицы $A = 
     \begin{bmatrix}
          &&1\\
          &\rotatebox[origin=c]{75}{$\ddots$}&\\
          1&& \\
     \end{bmatrix}_{n \times n}
-    $}.
+    $}.\\
+
+    Запишем матричку $A - \lambda I$ и найдём её характеристический многочлен разложив по Лапласу последнюю строку: 
+    \[
+    |A - \lambda I| = 
+    \begin{vmatrix}
+        -\lambda & 0 & \cdots & 0 & 1\\
+        0 & -\lambda & \cdots & 1 & 0\\
+        \vdots & \vdots & \ddots & \vdots & \vdots \\
+        0 & 1 & \cdots & -\lambda & 0\\
+        1 & 0 & \cdots & 0 & -\lambda\\
+    \end{vmatrix} = 
+    -\lambda 
+    \begin{vmatrix}
+        -\lambda & 0 & \cdots & 0 \\
+        0 & -\lambda & \cdots & 1 \\
+        \vdots & \vdots & \ddots & \vdots  \\
+        0 & 1 & \cdots & -\lambda \\
+    \end{vmatrix}
+     + (-1)^{n - 1}
+     \begin{vmatrix}
+          0 & \cdots & 0 & 1\\
+         -\lambda & \cdots & 1 & 0\\
+         \vdots & \ddots & \vdots & \vdots \\
+         1 & \cdots & -\lambda & 0\\
+     \end{vmatrix}
+    \]
+    Будем обозначать определитель $|A - \lambda I|, A_{k \times k}$ как $D_k$, тогда искомый определитель это $D_n$, теперь то, что мы получили на предыдущем шаге ещё раз разложим по Лапласу по первой строке и выразим $D_n$ через $D_{n - 2}$:
+    \[
+    D_n = (-\lambda)(-\lambda)
+    \begin{vmatrix}
+        -\lambda & \cdots & 1\\
+        \vdots & \ddots & \vdots \\
+        1 & \cdots & -\lambda\\
+    \end{vmatrix}
+     + (-1)^{n - 1}(-1)^{n - 2}
+     \begin{vmatrix}
+        -\lambda & \cdots & 1\\
+        \vdots & \ddots & \vdots \\
+        1 & \cdots & -\lambda\\
+    \end{vmatrix}
+     = \lambda^2 D_{n - 2} - D_{n - 2} = (\lambda^2 - 1)D_{n - 2}
+    \]
+    это разложение верно для $n > 2$, найдём $D_1$ и $D_2$: $D_1 = |1 - \lambda| = 1 - \lambda$,\\ $D_2 = 
+    \begin{vmatrix}
+        -\lambda & 1\\
+        1 & -\lambda\\
+    \end{vmatrix}
+     = \lambda^2 - 1
+    $
+    тогда если $n$ чётное, то $D_n = (\lambda^2 - 1)^{\frac{n}{2}}$, а если нечётное, то $D_n = (\lambda^2 - 1)^{\frac{n - 1}{2}}(1 - \lambda)$.\\
+    Ответ:\\ при $n = 2k, k \in \mathds{R}$ характеристический многочлен равен $|A - \lambda I| = (\lambda^2 - 1)^{\frac{n}{2}}$\\
+    при $n = 2k - 1, k \in \mathds{R}$ этот многочлен равен $|A - \lambda I| = (\lambda^2 - 1)^{\frac{n - 1}{2}}(1 - \lambda)$.\\
     \item \textbf{Найдите все инвариантные подпространства оператора дифференциирования в пространстве всех вещественных многочленов.}
     \item \textbf{Докажите, что число является собственным значением линейного оператора на конечномерном пространстве в том и только в том случае, когда оно является корнем его характеристического многочлена.}
     \item \textbf{линейный оператор действует в $n$-мерном пространстве над полем, содержащем все корни его характеристического многочлена. Докажите, что существует базис пространства , в котором матрица оператора имеет верхний треугольный вид с главной диагональю, заполненной корнями характеристического многочлена в любом заранее заданном порядке.}
@@ -132,7 +214,42 @@
     \item \textbf{Найдите собственные значения и собственные подпространства комплексной матрицы $A = I - 2uu^{*}$, где $u^{*}u = 1, \quad u \in \mathds{C}^n$.}
     \item \textbf{В вещественной матрице, которая является нильпотентной жордановой клеткой порядка $n$, элемент в позиции $(n, 1)$ заменяется на $\varepsilon > 0$. Докажите, что все собственные значения возмущённой матрицы простые и по модулю равны $\varepsilon^{\frac{1}{n}}$.}
     \item \textbf{Докажите, что линейный оператор $A: V \rightarrow V$ коммутирует со всеми линейными операторами, действующими на бесконечномерном пространстве $V$ над полем $\mathds{P}$, в том и только в том случае, когда он является оператором умножения на некоторое число из поля $\mathds{P}$.}
-    
+    \item \textbf{Пусть $A$ и $B$ --- квадратные матрицы над одним и тем же полем. Докажите, что характеристические многочлены матриц $AB$ и $BA$ совпадают.}
+    \item \textbf{Пусть верхнетреугольная матрица порядка $n = n_1 + n_2$ имеет вид $
+    \begin{bmatrix}
+        A_{11} & A_{12}\\
+        0 & A_{22}\\
+    \end{bmatrix}
+    $ и при этом блоки $A_{11} \in \mathds{C}^{n_1 \times n_1}$ и $A_{22} \in \mathds{C}^{n_2 \times n_2}$ не имеют общий собственных значений. Докажите, что существует матрица $X \in \mathds{C}^{n_1 \times n_2}$ такая, что
+    \[
+    \begin{bmatrix}
+        I & X\\
+        0 & I\\
+    \end{bmatrix}
+    \begin{bmatrix}
+        A_{11} & A_{12}\\
+        0 & A_{22}\\
+    \end{bmatrix}
+    \begin{bmatrix}
+        I & X\\
+        0 & I\\
+    \end{bmatrix}^{-1}
+    =
+    \begin{bmatrix}
+        A_{11} & 0\\
+        0 & A_{22}\\
+    \end{bmatrix}
+    \]
+    }
+    \item \textbf{Пусть $J$ --- жорданова клетка порядка $n$ с нулевым собственным значением. Докажите, что уравнение $X^2 = J$ относительно $X \in \mathds{C}^{n \times n}$ не имеет решений, если $n \geqslant 2$.}
+    \item \textbf{докажите, что любая вещественная матрица с помощью вещественного преобразования подобия приводится к прямой сумме вещественных жордановых клеток и вещественных  блочных жордановых клеток.}
+    \item \textbf{докажите, что матрица порядка $n \geqslant 2$ имеет конечное число инвариантных подпространств в том и только в том случае, когда каждому собственному значению соответствует ровно одна жорданова клетка.}
+    \item \textbf{ Пусть $V, W ,Z$ --- конечномерные линейные пространства над общим полем. Докажите, что для произвольных линейных операторов $B : V \rightarrow Z$ и $A : Z \rightarrow W$ выполнено неравенство $rankA  + rankB - rank(AB) \leqslant dimZ$.}
+    \item \textbf{Докажите, что вещественная квадратная матрица подобна своей транспонированной матрице. Верно ли это для матриц над произвольным полем?}
+    \item \textbf{Докажите, что диагонализуемая матрица ранга $r$ обладает ненулевым главным минором порядка $r$.}
+    \item \textbf{Докажите, что собственные значения матрицы $A = [a_{kl}]$ с элементами $a_{kl} = \varepsilon^{(k - 1)(l - 1)}, 1 \leqslant k, l \leqslant n$, где $\varepsilon$--- первообразный корень степени $n$ из единицы, равны $\pm n^{\frac{1}{2}}$ и $\pm in^{\frac{1}{2}}$.}
+    \item \textbf{опишите алгоритм вычисления коэффициентов характеристического многочлена верхней почти треугольной матрицы порядка $n$ с числом арифметических операций $O(n^3)$.}
+    \item \textbf{Пусть квадратная матрица $A$ с элементами из некоторого поля аннулируется неприводимым многочленом с коэффициентами из этого поля. Докажите, что если степень $n$ этого многочлена равна порядку матрицы, то система векторов Крылова $x, Ax, \cdots, A^{n-1}x$ будет линейно независимой для какого-то вектора $x$ с элементами из этого поля.}
 \end{enumerate}
 \section{Расстояния, нормы, скалярные произведения, полиэдры}
 \begin{enumerate}%задачки оформляем так
@@ -140,6 +257,22 @@
 
     Решение/доказательство
     \item \textbf{текст ещё одной задачи}%и так далее
+
+
+
+задача №67 по запросу Зизова:
+
+Интеграл $a_{ij} = \int \limits_{0}^{1} x^{i + j} \rho(x)dx = \xi_{i + j}^{i + j} \int \limits_{0}^{1} \rho(x)dx = c \xi_{i + j}^{i + j}$ , где $c = \int \limits_{0}^{1} \rho(x)dx$ по первой теореме о среднем. Тогда можно записать матрицу оператора:
+\[
+A = c
+\begin{bmatrix}
+    \xi_2^2 & \xi_3^3 & \cdots & \xi_{n + 1}^{n + 1}\\
+    \xi_3^3 & \xi_4^4 & \cdots & \xi_{n + 2}^{n + 2}\\
+    \vdots & \vdots & \ddots & \vdots \\
+    \xi_{n + 1}^{n + 1} & \xi_{n + 2}^{n + 2} & \cdots & \xi_{2n}^{2n}\\
+\end{bmatrix}
+\]
+
 \end{enumerate}
 \section{Нормальные операторы, эрмитовы матрицы}
 \begin{enumerate}
